--- a/templates/list.html
+++ b/templates/list.html
@@ -5,11 +5,12 @@
 <html>
 <head>
 {#    <script src="{% static 'js/plotly-2.6.3.min.js' %}"></script>#}
-     <script src="https://cdn.plot.ly/plotly-2.6.3.min.js"></script>
+
 </head>
 <body>
 <div id="plot"></div>
 <div id="myDiv"></div>
+{#<script src="https://cdn.plot.ly/plotly-2.6.3.min.js">  </script>#}
     <script>
         var data = [
   {
